Fixed text alignment under IE

--- a/public_html/css/core.css
+++ b/public_html/css/core.css
@@ -28,7 +28,7 @@ img {
 	}
 	#main.logo form {
 		margin: 0 auto;
-		text-align: initial;
+		text-align: left;
 	}
 
 .message {
