--- a/public_html/css/index-about.css
+++ b/public_html/css/index-about.css
@@ -3,10 +3,10 @@
 }
 
 #about p {
-	text-align: initial;
+	text-align: left;
 }
 #about h1 {
-	text-align: initial;
+	text-align: left;
 }
 #about section {
 	margin-bottom: 2em;
